# webcam-colorspace

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bmp.rs  cli.rs  main.rs  yuv.rs
src/platform/: linux.rs  mod.rs  windows.rs
