[package]
name = "webcam-colorspace"
version = "0.1.0"
edition = "2021"
description = "Camera colorspace debugging tool — inspect OS-reported YUV matrix (BT.601 vs BT.709) for connected cameras"

[dependencies]
anyhow = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
]

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"
